finally solved my nav bar problem thanks to help from James. I was not reading the elements section correctly and updated it by applying flexbox align items= center

--- a/navtrial.css
+++ b/navtrial.css
@@ -3,6 +3,7 @@
     padding: 0px;
     box-sizing: border-box;
     animation: backgroundcolour infinite 40s;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 
 }
 /* header { 
@@ -63,6 +64,7 @@ nav ul li:hover {
     display: flex;
     flex-direction: column;
     align-items: center;
+    ;
 }
 .contact form input {
     width: 50%;
@@ -78,4 +80,15 @@ nav ul li:hover {
     color: #ccc;
     margin: 1.2rem 0;
 
+}
+.container {
+    background-color: azure;
+    width: 100%;
+    min-height: 100vh;
+
+
+}
+.container .row {
+    width: 85%;
+    margin: auto;
 }
